# FragRag

./: Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
Experimentation/: Graph_RAG.ipynb  Queries.txt  entity_index.faiss  entity_metadata.pkl  ollama_test.ipynb
Experimentation2/: Graph_RAG2.ipynb  entities.json  entity_texts_cosine.index  entity_texts_mapping.pkl  labels.index  labels_mapping.pkl  relationships.json  test.ipynb
SimpleRagApp/: RAG.ipynb  chunks.index  chunks.pkl
app/db/faiss/: faiss.py
app/models/: model.py
app/routes/: routes.py
app/services/: neo4j_service.py
app/util/: utils.py
app/workflows/: graph_workflow.py
paper/: ieee.fdb_latexmk  ieee.fls  ieee.tex  paper.aux  paper.fdb_latexmk  paper.fls  paper.md  paper.out  paper.tex
