[project]
name = "fragrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "neo4j>=5.28.2",
    "ollama>=0.5.3",
    "pymupdf>=1.26.3",
    "sentence-transformers>=5.1.0",
    "spacy>=3.8.7",
    "uvicorn>=0.35.0",
]
